@@ -1,5 +1,5 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
-.TH FFMPEG2THEORA 1 "November 27, 2005"
+.TH FFMPEG2THEORA 1 "December 30, 2005"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -17,7 +17,7 @@ ffmpeg2theora \- command-line converter to create Ogg Theora and Ogg
 Vorbis files.
 .SH SYNOPSIS
 .B ffmpeg2theora
-.RI [ options ] " inputfile" 
+.RI [ options ] " inputfile"
 .SH DESCRIPTION
 This manual page documents briefly the \fBffmpeg2theora\fP command.
 .PP
@@ -29,35 +29,46 @@ To read from standard input, specify `\-' as the input filename.
 These programs follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
-.SS Output options:
+.SS General output options:
 .TP
 .B \-o, \-\-output
 Specify the output filename.  If no output filename is specified, output will
 be written to \fIinputfile\fP.ogg.  To output to standard output, specify
 /dev/stdout as the output file.
 .TP
+.B \-s, \-\-starttime
+Start encoding at this time (in seconds).
+.TP
+.B \-e, \-\-endtime
+End encoding at this time (in seconds).
+.TP
+.B \-p, \-\-v2v-preset
+Encode file with v2v preset.  Right now, there is preview and pro.  Run
+\*(lqffmpeg2theora -p info\*(rq for more information.
+.SS Video output options:
+.TP
 .B \-v, \-\-videoquality
 [0 to 10] Set encoding quality for video (default: 5).
 .TP
 .B \-V, \-\-videobitrate
-[45 to 2000] Set encoding bitrate for video (in kb/s).
-.TP
-.B \-x, \-\-width
-Scale to given width.
-.TP
-.B \-y, \-\-height
-Scale to given height.
-.TP
-.B \-\-aspect
-Define frame aspect ratio (e.g. 4:3, 16:9).
-.TP
-.B \-\-crop[top|bottom|left|right]
-Crop input before resizing.
+[1 to 16000] Set encoding bitrate for video (in kb/s).
 .TP
 .B \-\-optimize
 Optimize output Theora video, using a full search for motion vectors
 instead of a hierarchical one. This can reduce video bitrate about 5%,
 but it is slower and therefore is disabled by default.
+.TP
+.B \-x, \-\-width
+Scale to given width (in pixels).
+.TP
+.B \-y, \-\-height
+Scale to given height (in pixels).
+.TP
+.B \-\-aspect
+Define frame aspect ratio (e.g. 4:3, 16:9).
+.TP
+.B \-\-croptop, \-\-cropbottom, \-\-cropleft, \-\-cropright
+Crop input by given pixels before resizing.
 .TP
 .B \-S, \-\-sharpness
 [0 to 2] Sharpness of images (default: 2).  Note: lower values make the video
@@ -65,31 +76,22 @@ sharper.
 .TP
 .B \-K, \-\-keyint
 [8 to 65536] Set keyframe interval (default: 64).
+.SS Audio output options:
 .TP
 .B \-a, \-\-audioquality
 [-2 to 10] Set encoding quality for audio (default: 1).
 .TP
 .B \-A, \-\-audiobitrate
-[32 to 2000] Set encoding bitrate for audio (in kb/s).
-.TP
-.B \-H, \-\-samplerate
-Set output samplerate (in Hz).
+[32 to 500] Set encoding bitrate for audio (in kb/s).
 .TP
 .B \-c, \-\-channels
 Set number of output channels.
 .TP
+.B \-H, \-\-samplerate
+Set output samplerate (in Hz).
+.TP
 .B \-\-nosound
 Disable the sound from input.
-.TP
-.B \-e, \-\-endtime
-End encoding at this time (in seconds).
-.TP
-.B \-s, \-\-starttime
-Start encoding at this time (in seconds).
-.TP
-.B \-p, \-\-v2v-preset
-Encode file with v2v preset.  Right now, there is preview and pro.  Run
-\*(lqffmpeg2theora -p info\*(rq for more information.
 .SS Input options:
 .TP
 .B \-\-deinterlace
@@ -100,24 +102,33 @@ deinterlaced.
 Specify input format.
 .TP
 .B \-\-v4l  /dev/video0
-read data from v4l device /dev/video0, 
-you have to specify an output file with -0
+read data from v4l device /dev/video0,
+you have to specify an output file with -o.
 .TP
 .B \-\-inputfps
 Override input fps.
+.TP
+.B \-\-audiostream id
+By default the last audio stream is selected, use this to select
+another audio stream.
+.TP
+.B \-\-sync
+Use A/V sync from input container. Since this does not work with
+all input format you have to manualy enable it if you have
+issues with A/V sync.
 .SS Metadata options:
 .TP
 .B \-\-artist
-Name of artist (director)
+Name of artist (director).
 .TP
 .B \-\-title
-Title
+Title.
 .TP
 .B \-\-date
-Date
+Date.
 .TP
 .B \-\-location
-Location
+Location.
 .TP
 .B \-\-organization
 Name of organization (studio).
@@ -129,11 +140,8 @@ Copyright.
 License.
 .SS Other options:
 .TP
-.B \-\-nice
+.B \-\-nice n
 Set niceness to n.
-.TP
-.B \-\-debug
-Output some more information during encoding.
 .TP
 .B \-h, \-\-help
 Output a help message.
