@@ -1,13 +1,16 @@
 svn
     - support encoding from .ogg input file.
-    - don't change samplerate and audio channel unless we use command line
-      options.
+    - don't change samplerate and audio channels unless we use command
+      line options -H or -c, or when the input channels are > 2
+      (limiting it to a maximum of 2).
     - don't change the image resolution, unless we use the presets or the
       -x or -y options (old default was to encode to preset preview).
     - change the audio quality levels that were multiplied by 0.99, now 
       match the quality settings of oggenc, e.g. -a2 == -q2.
     - add --optimize option: use a full search for motion vectors and
       reduce Theora bitrate by about 5%, but it is slower.
+    - compile video4linux only under linux.
+    - update to help and man page.
 
 0.15     2005-08-31
     - ti.dropframes_p = 0 so we do not loos half of the frames.
